--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
     border-radius: 16px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     width: 320px;
+    width: 60%;
     box-sizing: border-box;
   }
   
