--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@
     width: 100%;
     background-color: #4CAF50;
     color: white;
+    margin-top: 10px;
     padding: 10px;
     border: none;
     border-radius: 8px;
