--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,11 @@
     margin-bottom: 15px;
     font-size: 14px;
   }
+
+  .form-check-input {
+    margin-right:10px ;
+  }
+  
   
   button {
     width: 100%;
