--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
   }
   
   .app-title {
-    font-family: 'Georgia', serif;
+    font-family: 'Gill Sans', serif;
     font-weight: 900;
     font-size: 32px; /* Increase the size of the title */
     color: white; /* Make the title white for better contrast */
@@ -64,6 +64,134 @@
     width: 50%;
     box-sizing: border-box;
   }
+
+  .container {
+    display: flex;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+  }
+  
+  .sidebar {
+    background-color: #ffe784;
+    padding: 20px;
+    width: 250px;
+    border-right: 0.5px solid #ffe784;
+    border-radius: 20px 0 0 20px;
+  }
+  
+  .profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+
+  .avatar {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+  }
+  
+  .avatar.large {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .menu a {
+    display: block;
+    margin: 10px 0;
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+  }
+
+  .menu .icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    vertical-align: middle;
+  }
+  
+  .account-info {
+    flex: 1;
+    background-color: #ffe16a;
+    padding: 30px;
+    border-radius: 0 20px 20px 0;
+  }
+
+  .info-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+    margin-bottom: 20px;
+  }
+  
+  .info-labels p {
+    margin: 0;
+    font-size: 16px;
+    text-align: left;
+  }
+  
+  .edit-btn {
+    padding: 8px 12px;
+    background-color: #e4cf67;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    width: auto;      /*width of box follow the text inside*/
+    white-space: nowrap;
+  }
+
+  .user-details {
+    margin-top: 20px;
+  }
+  
+  .photo-section {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 20px;
+  }
+  
+  .add-photo {
+    color: blue;
+    font-size: 14px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  
+  .field {
+    margin-bottom: 20px;
+  }
+  
+  .input-box {
+    display: flex;
+    align-items: center;
+    background-color: #d6d1c9;
+    border-radius: 20px;
+    padding: 8px 12px;
+    max-width: 300px;
+  }
+  
+  .input-box input {
+    border: none;
+    background: transparent;
+    font-size: 16px;
+    flex: 1;
+    outline: none;
+  }
+  
+  .edit-icon {
+    cursor: pointer;
+    margin-left: 10px;
+  }  
+  
   
   h2 {
     font-family: Georgia, serif;
