--- a/css/weather.css
+++ b/css/weather.css
@@ -5,6 +5,15 @@
     padding: 20px;
 }
 
+h3 {
+    font-family: Georgia, serif;
+    font-weight: 900;
+    font-size: 24px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: white;
+}
+
 .location{
     display: flex;
     align-items: center;
@@ -101,7 +110,7 @@
     border-radius: 4px;
     font-size: 1rem;
     color: #fff;
-    background: #45a049;
+    background: #4CAF50;
     transition: 0.2s ease;
 }
 
@@ -172,7 +181,7 @@
 .weather-input .city-suggestions {
     width: 100%;
     column-gap: 35px;
-    background-color: #45a049;
+    background-color: #4CAF50;
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
