--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,10 @@
   background-color: #ffeeaa;
   max-width: 100%;
   box-sizing: border-box;
-  border-radius: 5px;
+  border-radius: 20px;
+  border-right: 3px solid #ddb872;
+  border-top: 3px solid #ddb872 ;
+  border-bottom: 3px solid #ddb872;
 }
 
 /* Footer styling */
@@ -129,15 +132,12 @@ footer {
     display: flex;
     min-height: 100vh;
     padding: 0px;  /*gap between top bottom */
-    width: 100%;
-    max-width: 1200px;
+    width: 80vw;
+    max-width: none;
     margin:0 auto;
     border-radius: 20px;
     box-sizing: border-box;
     align-items: stretch; 
-    flex: 1;/* ensure sidebar mathces content height */
-    /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); if want the box to be seen lifted*/
-
   }
 
   /* Hamburger always visible */
@@ -192,6 +192,8 @@ footer {
     padding: 20px;
     position: relative;
     z-index: 1;
+    
+
   }
 
   .content-section {
@@ -208,9 +210,9 @@ footer {
     background-color: #FFE784;
     padding: 20px;
     width: 250px;
-    border-right: 1px solid #d6d1c9; 
     border-radius: 20px 0 0 20px;
     box-sizing: border-box;
+    border: 3px solid #ddb872;
   }
 
   .profilesidebar a {
@@ -298,13 +300,32 @@ footer {
 
   .user-details {
     margin-top: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px; /* space between photo and field */
+    flex-wrap: wrap; /* allows wrapping on smaller screens */
+  }
+
+  .info-edit {
+    margin-top: 20px;
   }
   
   .photo-section {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 8px;
     margin-bottom: 20px;
+  }
+
+    .avatar.large {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #ccc;
+    background-image: url('');
+    background-size: cover;
+    background-position: center;
   }
   
   .add-photo {
@@ -316,6 +337,7 @@ footer {
   
   .field {
     margin-bottom: 20px;
+    flex: 1;
   }
 
   .input-button-group {
@@ -476,7 +498,45 @@ footer {
     line-height: 1;
   }
   
+  .warning-text {
+  color: #D16D6A;
+  font-weight:600;
+  margin-bottom: 15px;
+}
 
+.delete-consequences {
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 20px;
+  align-items: flex-start;
+}
+
+.delete-consequences li {
+  padding: 5px 0;
+}
+
+.delete-btn {
+  background-color: #d32f2f;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.cancel-btn {
+  background-color: #ccc;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.icon {
+  vertical-align: middle;
+  /* You might need to adjust other styles like width/height as needed */
+}
   
   p {
     text-align: center;
