--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -24,13 +24,22 @@
 
   
   .dashboard-nav-bar a:hover {
-    color: white;
+    color: rgb(106, 104, 104);
     text-decoration: underline;
   }
 
-  #news-container {
-    width: 500px;
-    max-height: 500px;
+
+  .news-container {
+    max-width: 1200px; /* similar to Bootstrap container */
+    margin: 3rem auto;  /* vertical margin = my-5 */
+    padding: 0 15px;
+  }
+
+  .news-row {
+    display: flex;
+    align-items: center; /* vertically center content */
+    flex-wrap: nowrap;     /* allow stacking on small screens */
+    gap: 20px;           /* optional: spacing between children */
   }
   
     .login-signup-container {
@@ -46,7 +55,7 @@
     text-decoration: none; /* Remove underline from the link */
     color: #333; /* Example text color */
     font-weight: bold; /* Make it stand out */
-    padding: 10px;
+    padding: 1px;
     white-space: nowrap; /*prevent text from wrapping*/
   }
 
@@ -54,7 +63,7 @@
     background-color: #C85F40; 
     color: white; /* White text color */
     border: none; /* Remove default button border */
-    padding: 10px 10px; /* Add padding inside the button */
+    padding: 10px 10px 10px 10px; /* Add padding inside the button */
     border-radius: 15px; /*rounded corners */
     cursor: pointer; /* Change cursor to indicate it's clickable */
     font-weight: bold;
@@ -64,13 +73,3 @@
     background-color: #be5139; /* Darker shade on hover */
   }
   
-
-  
-
-  
-  
-  
-
-
-
-
