--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,33 @@ footer {
     align-items: stretch; 
   }
 
+  .feature-section{
+    display: grid;
+    padding: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    gap: 20px; 
+    max-width: 90%;
+    margin: 0 auto;
+  }
+
+  .feature-card{
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    padding: 25px;
+    text-align: center;
+  }
+
+  .feature-card img{
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+  }
+
   /* Hamburger always visible */
   .mainHamburger {
     font-size: 28px;
-    padding: 10px 20px;
+    padding: 5px 20px;
     cursor: pointer;
     background-color: #fffcf1;
     position: fixed;
@@ -152,6 +175,7 @@ footer {
     z-index: 2000;
     border-radius: 5px;
   }
+
 
   /* Main Sidebar */
   .mainsidebar {
@@ -199,11 +223,6 @@ footer {
     height: auto;
   }
   
-  /*
-  .mainsidebar.open ~ .content {
-    margin-right: 250px; /* shift content to right when sidebar is open */
-  
-
   .profilesidebar {
     background-color: #FFE784;
     padding: 20px;
@@ -398,7 +417,7 @@ footer {
   }
   
   
-  button {
+    button {
     width: 100%;
     background-color: #4CAF50;
     color: white;
@@ -411,6 +430,20 @@ footer {
     cursor: pointer;
     font-weight: bold;
     align-items: center;
+  }
+
+  .getNowButton{
+    width: 50%;
+    background-color: hsl(217, 100%, 80%);
+    color: rgb(58, 59, 60);
+    margin:auto;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    align-items: center;
+    text-decoration: none;
   }
   
   button:hover {
@@ -535,7 +568,34 @@ footer {
   vertical-align: middle;
   /* You might need to adjust other styles like width/height as needed */
 }
-  
+ 
+/*for index page scenery*/
+#scenery-container .carousel-item {
+    padding: 20px; /* Add some padding around the item */
+}
+
+.scenery-caption-left {
+    width: 40%; /* Adjust the width for the caption area */
+    padding-right: 20px; /* Add some spacing between the caption and the image */
+    text-align: left; /* Align text to the left */
+}
+
+.scenery-caption-left b {
+    font-size: 1.2em; /* Adjust the font size of the bold text */
+    display: block; /* Make it a block-level element to take full width of its container */
+    margin-bottom: 10px; /* Add some space below the title */
+}
+
+.scenery-container .carousel-inner img {
+    object-fit: cover; /* Ensure the image covers the area without distortion (adjust as needed) */
+    height: auto; /* Maintain aspect ratio */
+}
+
+.carousel-inner img {
+  height: 400px;
+  object-fit: cover;
+}
+
   p {
     text-align: center;
     margin-top: 15px;
