--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -3,14 +3,12 @@
     padding: 20px;
   }
   
-  .profile-pic {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-bottom: 20px;
-  }
   
+  .card-img-top {
+    height: 250px; /* Adjust as needed */
+    object-fit: cover;
+    width: 100%;
+  }
   
   nav a {
     color: black;
@@ -52,6 +50,7 @@
     position: absolute;
     z-index: 100;
   }
+
 
   .login-signup-container a {
     text-decoration: none; /* Remove underline from the link */
