--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #FBEBC5;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   /* Stack element vertically */
