--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
+
 }
 
 :root {
@@ -104,6 +106,7 @@ footer {
   margin: 0;            /* prevent spacing around it */
   box-sizing: border-box; /* include padding in width */
   margin-top: auto; /* Makes sure it stays at the bottom of the page */
+  z-index: 4;
 }
 
 header {
@@ -137,7 +140,7 @@ h1 {
 
 .container {
   display: flex;
-  min-height: 100vh;
+  min-height: 50vh;
   padding: 0px;
   /*gap between top bottom */
   width: 80vw;
@@ -159,7 +162,7 @@ h1 {
 
 .feature-card {
   width: 100%;
-  border: 1px solid #ccc;
+  border: 1.5px solid #a6a7b6;
   border-radius: 15px;
   padding: 25px;
   text-align: center;
@@ -167,7 +170,7 @@ h1 {
 
 .feature-card img {
   max-width: 100%;
-  height: auto;
+  height: 250px;
   margin-bottom: 10px;
 }
 
@@ -234,6 +237,65 @@ h1 {
   width: 100%;
   height: auto;
 }
+
+.section-divider{
+  height: 20px;
+  background-color: #9b8e5f;
+  padding-top: 10px; 
+  margin-top: 20px; /*space between divider and item above it*/
+  z-index: 2;
+  width: 100vw;
+  align-items: center;
+}
+
+
+
+.image-wrapper {
+  position: relative;
+  margin-top: 0; /* no extra space added */
+}
+.hero-image {
+  height: 100vh;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.hero-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  opacity: 1;
+}
+
+.content-overlay {
+  margin-top: -100vh; /* pull this over the image */
+  position: relative;
+  background-color: rgba(207, 205, 205, 0.4);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+  padding: 50px;
+}
+
+.homeCarboncontent {
+  max-width: 600px;
+  text-align: center;
+  animation: fadeInUp 3s ease-out forwards;
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
 
 .profilesidebar {
   background-color: #FFE784;
@@ -446,6 +508,7 @@ button {
   cursor: pointer;
   font-weight: bold;
   align-items: center;
+  text-decoration: none;
 }
 
 .getNowButton {
@@ -469,13 +532,9 @@ button:hover {
 
 .faq-item {
   background-color: #FFEB9A;
-  /* Your yellow color */
   border: 1px solid #ffc862;
-  /* Optional border */
-  margin-bottom: 0px;
-  /* Space between items */
+  margin-bottom: 0px;/* Space between items */
   border-radius: 10px;
-  /*  rounded corners */
   overflow: hidden;
   /* Important for the slide-down effect */
 }
