--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: whitesmoke;
+  background-color: #FEFEFA;  /*whitesmoke*/
   display: flex;
   flex-direction: column;
   /* Stack element vertically */
@@ -622,6 +622,7 @@ button:hover {
   color: #D16D6A;
   font-weight: 600;
   margin-bottom: 15px;
+  text-align: left;
 }
 
 .delete-consequences {
