--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #FEFEFA;  /*whitesmoke*/
+  background-color: #FEFEFA;
+  /*whitesmoke*/
   display: flex;
   flex-direction: column;
   /* Stack element vertically */
@@ -102,10 +103,14 @@ footer {
   padding: 10px 0;
   font-size: 0.9rem;
   height: auto;
-  width: 100vw;         /* full width */
-  margin: 0;            /* prevent spacing around it */
-  box-sizing: border-box; /* include padding in width */
-  margin-top: auto; /* Makes sure it stays at the bottom of the page */
+  width: 100vw;
+  /* full width */
+  margin: 0;
+  /* prevent spacing around it */
+  box-sizing: border-box;
+  /* include padding in width */
+  margin-top: auto;
+  /* Makes sure it stays at the bottom of the page */
   z-index: 4;
 }
 
@@ -149,6 +154,7 @@ h1 {
   border-radius: 20px;
   box-sizing: border-box;
   align-items: stretch;
+  justify-content: center;
 }
 
 .feature-section {
@@ -238,11 +244,12 @@ h1 {
   height: auto;
 }
 
-.section-divider{
+.section-divider {
   height: 20px;
   background-color: #9b8e5f;
-  padding-top: 10px; 
-  margin-top: 20px; /*space between divider and item above it*/
+  padding-top: 10px;
+  margin-top: 20px;
+  /*space between divider and item above it*/
   z-index: 2;
   width: 100vw;
   align-items: center;
@@ -252,8 +259,10 @@ h1 {
 
 .image-wrapper {
   position: relative;
-  margin-top: 0; /* no extra space added */
+  margin-top: 0;
+  /* no extra space added */
 }
+
 .hero-image {
   height: 100vh;
   overflow: hidden;
@@ -269,7 +278,8 @@ h1 {
 }
 
 .content-overlay {
-  margin-top: -100vh; /* pull this over the image */
+  margin-top: -100vh;
+  /* pull this over the image */
   position: relative;
   background-color: rgba(207, 205, 205, 0.4);
   min-height: 100vh;
@@ -533,7 +543,8 @@ button:hover {
 .faq-item {
   background-color: #FFEB9A;
   border: 1px solid #ffc862;
-  margin-bottom: 0px;/* Space between items */
+  margin-bottom: 0px;
+  /* Space between items */
   border-radius: 10px;
   overflow: hidden;
   /* Important for the slide-down effect */
