--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
-  width: 100vw;
+  width: 100%;
   /* Ensures it stretches across the full width */
 }
 
