--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap');
+
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #FEFEFA;
   /*whitesmoke*/
   display: flex;
@@ -39,7 +41,7 @@ body {
 }
 
 .app-title {
-  font-family: Georgia, serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   font-size: 20px;
   color: #333;
@@ -67,7 +69,7 @@ body {
 }
 
 .app-title {
-  font-family: 'Gill Sans', serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   font-size: 32px;
   /* Increase the size of the title */
@@ -126,7 +128,7 @@ header {
 }
 
 h1 {
-  font-family: 'Gill Sans', serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   font-size: 32px;
   text-transform: uppercase;
@@ -365,15 +367,6 @@ h1 {
   vertical-align: middle;
 }
 
-/*
-  .boxStyle {
-    flex: unset;
-    background-color: #FFEB9A;
-    padding: 20px;
-    border-radius: 0 20px 20px 0;
-    height: auto;
-    min-height: auto;
-  } */
 
 .info-row {
   display: flex;
@@ -477,7 +470,7 @@ h1 {
 
 
 h2 {
-  font-family: Georgia, serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 900;
   font-size: 24px;
   text-align: center;
@@ -714,7 +707,7 @@ p {
 }
 
 h3 {
-  font-family: 'Gill Sans', serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 600;
   font-size: 17px;
   text-transform: uppercase;
