--- a/css/travel.css
+++ b/css/travel.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap');
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 .search-section {
     width: 90%;
     padding: 20px;
@@ -94,7 +100,7 @@
   }
 
   .card h3{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Playfair Display', serif;
     font-weight: lighter;
     margin-left: 10px;
     text-transform: none;
