--- a/css/weather.css
+++ b/css/weather.css
@@ -21,7 +21,7 @@ h3 {
 
 .location{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     margin-bottom: 30px;
 }
 
@@ -32,10 +32,25 @@ h3 {
     vertical-align: middle;
 }
 
-.location h2 {
+
+/* For new structure: .location-text, .city-name, .date */
+.location-text {
+    display: flex;
+    flex-direction: column;
+}
+
+.city-name {
+    margin: 0;
     font-size: 1.5rem;
-    margin: 0; /* Remove default margin */
-    line-height: 1;
+    font-family: 'Playfair Display', serif;
+    white-space: normal;
+}
+
+.date {
+    margin: 5px 0 0;
+    font-size: 1rem;
+    color: #888585;
+    font-family: 'Lato', sans-serif;
 }
 
 .container {
@@ -60,7 +75,10 @@ h3 {
     border-radius: 5px;
     padding: 20px 70px 20px 20px;
     display: flex;
-    width: max-content;
+    width: 100%;
+    min-width: 300px;
+    max-width: 600px;
+    flex-shrink: 0;
     justify-content: space-between;
     margin-bottom: 40px;
 }
